--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 app-common-python>=0.2.5
-ccx-messaging @ git+https://github.com/RedHatInsights/insights-ccx-messaging@v3.8.3
+ccx-messaging @ git+https://github.com/RedHatInsights/insights-ccx-messaging@v4.1.4
 insights-core-messaging @ git+https://github.com/RedHatInsights/insights-core-messaging@1.2.10
+setuptools>=70.0.0
