--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   bdd:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,7 +25,7 @@ jobs:
         run: docker cp "$BDD_CONTAINER:/insights-behavioral-spec/logs/insights_sha_extractor.log" .
       - name: Store service logs
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: store-logs
           path: insights_sha_extractor.log
